# Bias-Amplification

./: .gitignore  .readthedocs.yaml  CoOccurMetrics.py  PredMetrics.py  PredMetrics_v1.py  README.md  pyproject.toml
.github/workflows/: publish.yml
attackerModels/: ANN.py
bias_amplification/: __init__.py
bias_amplification/attacker_models/: ANN.py  __init__.py
bias_amplification/metrics/: CoOccurMetrics.py  PredMetrics.py  PredMetrics_v1.py  __init__.py
bias_amplification/text/: __init__.py  attacker_models  attacker_models.py  metrics.py
bias_amplification/text/Dataset_test/: LIC.py  datacreator.py  test_dataset.py
bias_amplification/text/utils/: text.py
bias_amplification/utils/: __init__.py  config.py  datacreator.py  losses.py
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/api_reference/: attacker_models.rst  co_occur.rst  index.rst  metrics.rst  utils.rst
tests/: test_coOccurMetrics copy.py  test_coOccurMetrics.py  test_datacreator.py  test_predMetric.py  testing.py
utils/: config.py  datacreator.py  losses.py
