[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "bias-amplification"
version = "0.2.0"
description = "A library for measuring bias amplification in machine learning models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Bhanu Tokas", email = "btokas@asu.edu"},
    {name = "Rahul Nair", email = "rnair21@asu.edu"},
    {name = "Ushnesha Daripa", email = "udaripa@asu.edu"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "torch>=2.2.0,<2.3.0",
    "scikit-learn>=1.0.0",
    "numpydoc>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "numpydoc>=1.2.0",
]
text = [
    "torchtext>=0.15.0,<0.19.0",
    "transformers>=4.20.0",
    "gensim>=4.0.0",
    "sentence-transformers>=2.2.0",
    "nltk>=3.7",
    "tqdm>=4.64.0",
]


[tool.setuptools]
packages = [
    "bias_amplification", 
    "bias_amplification.utils", 
    "bias_amplification.attacker_models", 
    "bias_amplification.metrics",
    "bias_amplification.text",
    "bias_amplification.text.utils"
    ]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]